[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ethhelper"
version = "0.2.2"
description = "Asynchronous Geth node connection encapsulation based on httpx, websockets and web3.py. Geth node and Ethereum type extension based on pydantic."
authors = ["XiaoHuiHui233 <1025184872@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XiaoHuiHui233/ETHHelper"
keywords = ["ethereum", "asyncio", "geth", "pydantic"]

[tool.poetry.dependencies]
eth-typing = "^3.3.0"
httpx = "^0.23.3"
orjson = "^3.8.8"
pydantic = "^1.10.6"
python = "^3.10"
web3 = "^6.0.0"
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
python-dotenv = "^1.0.0"
ruff = "^0.0.253"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.2.0"
docutils = "<0.19"

[tool.ruff]
extend-select = ["Q", "RUF100", "C90"]
flake8-quotes = {inline-quotes = "double", multiline-quotes = "double"}
line-length = 79
mccabe = { max-complexity = 14 }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"
xfail_strict = true

[tool.black]
color = true
line-length = 79
skip-string-normalization = true
target-version = ["py310"]

[tool.isort]
combine_as_imports = true
float_to_top = true
force_grid_wrap = 1
force_sort_within_sections = true
honor_noqa = true
include_trailing_comma = true
known_first_party = "ethhelper"
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
implicit_optional = true
mypy_path = "src"
no_implicit_reexport = true
python_version = "3.10"
show_error_codes = true
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["src/ethhelper"]